--- a/DataScienceEcosystem.ipynb
+++ b/DataScienceEcosystem.ipynb
@@ -135,7 +135,7 @@
    "source": [
     "## Author\n",
     "\n",
-    "JLN (I'd prefer not to share my full name)"
+    "JN (I'd prefer not to share my full name)"
    ]
   },
   {
